Rather than pad the .navbar-collapse pad the .navigation is contains, to prevent strange collapsing behaviour. Overrides the previous 3 commits.

--- a/css/style.css
+++ b/css/style.css
@@ -7343,26 +7343,18 @@ table .checkbox input[type="checkbox"] {
   color: #02426f;
 }
 .navbar-default .navbar-collapse {
-  padding: 60px 0 20px;
+  padding: 0;
   margin: 0;
   position: absolute;
+  background-color: white;
   width: 300px;
   top: 0;
   right: 0;
   z-index: 1;
   overflow-y: unset;
 }
-.navbar-default .navbar-collapse.in {
-  background-color: white;
-}
-.navbar-default .navbar-collapse.collapsing {
-  background-color: white;
-  -webkit-transition-property: height, visibility, background;
-  transition-property: height, visibility, background;
-  -webkit-transition-duration: 0.35s;
-  transition-duration: 0.35s;
-  -webkit-transition-timing-function: ease;
-  transition-timing-function: ease;
+.navbar-default .navbar-collapse .navigation {
+  padding: 60px 0 20px;
 }
 .navbar-default .navbar-collapse .navbar-nav {
   margin: 0;
